tests/sksl/errors/UnsupportedGLSLIdentifiers.glsl
### Compilation failed:

error: 1: 'gl_FragCoord' is a reserved word
void fragcoord() { float x = gl_FragCoord.x; }
                             ^^^^^^^^^^^^
error: 1: unknown identifier 'gl_FragCoord'
void fragcoord() { float x = gl_FragCoord.x; }
                             ^^^^^^^^^^^^
error: 2: 'gl_FragColor' is a reserved word
void fragcolor() { float r = gl_FragColor.r; }
                             ^^^^^^^^^^^^
error: 2: unknown identifier 'gl_FragColor'
void fragcolor() { float r = gl_FragColor.r; }
                             ^^^^^^^^^^^^
4 errors
